# held-out-style

./: .gitignore  README.md  pyproject.toml  run.py
configs/: eval.yaml  pipeline.yaml  training.yaml
configs/styles/: carl_sagan.yaml  empathetic_support.yaml  hemingway.yaml  norm_macdonald.yaml
corpus/norm_macdonald/: hitler's_dog.txt  nothing_special.txt  onenightstand.txt
data/datasets/norm_macdonald/: dpo_dataset.jsonl  preference_pairs.json  sft_dataset.jsonl
data/principles/: norm_macdonald.json
data/results/norm_macdonald/: eval_results.json
src/: corpus.py  eval.py  extract.py  generate.py  inference.py  judge.py  rubric.py  train.py
